sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2: error: not found: value bubbleSort2
		bubbleSort2();
                ^AlgBubbleSort2:8: error: not found: value stop
				stop = false;
                                ^