sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort()  {
	
	for (i <- getNombreValeurs()-2 to 0){
		for(j <- 0 to i){
			if (plusPetit(i+1, i)){
				echange(i+1,i);
				stop = false;
			}
		}
	}
}